# git-files-to-prompt

./: .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/git_files_to_prompt/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
